--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
     - "3.5"
 
 install:
+    - pip install -r test_requirements.txt
     - pip install -r requirements.txt
     - pip install -e .
 
